--- a/config.json
+++ b/config.json
@@ -7,6 +7,6 @@
   "tasks": true,
   "chest": true,
   "reff": true,
-  "delay_pergantian_akun": 10,
+  "delay_account_switch": 10,
   "delay_loop": 3000
 }
